# Applied-Algorithmics-M2

./: CMakeLists.txt  readme.md
data/: Config1.txt  Img1.ppm  Img2.ppm  graph1.txt
data/graphs/: graph10.txt  graph11.txt  graph12.txt  graph13.txt  graph4.txt  graph5.txt  graph6.txt  graph9.txt
data/graphs/grid/: grid_10x10.txt  grid_11x11.txt  grid_12x12.txt  grid_13x13.txt  grid_14x14.txt  grid_15x15.txt  grid_16x16.txt  grid_17x17.txt  grid_18x18.txt  grid_19x19.txt  grid_8x8.txt  grid_9x9.txt  grid_DP.sol  grid_DP_summary.sol  grid_MIP1_summary.sol  grid_MIP2.sol  grid_PA.sol
data/solutions/grid/d=3/: grid_BB.sol  grid_BB_summary.sol  grid_BF.sol  grid_BF_summary.sol  grid_DP.sol  grid_DP_summary.sol  grid_MIP1.sol  grid_MIP1_summary.sol  grid_MIP2.sol  grid_MIP2_summary.sol  grid_PA.sol  grid_PA_summary.sol
data/solutions/grid/d=6/: grid_BB.sol  grid_BB_summary.sol  grid_BF.sol  grid_BF_summary.sol  grid_MIP1.sol  grid_MIP2_summary.sol  grid_PA_summary.sol
scripts/: drawsolutions.py
src/: Algorithm.hpp  AlgorithmBranchAndBound.cpp  AlgorithmBranchAndBound.hpp  AlgorithmBruteForce.cpp  AlgorithmBruteForce.hpp  AlgorithmDynamicProgramming.cpp  AlgorithmDynamicProgramming.hpp  AlgorithmMIP.cpp  AlgorithmMIP2.cpp  AlgorithmMIP2.hpp  Benchmark.cpp  BruteForce.cpp  BruteForce.hpp  Checker.cpp  Checker.hpp  DynamicProgramming.cpp  DynamicProgramming.hpp  FileIO.cpp  FileIO.hpp  Graph.cpp  Graph.hpp  MIP.cpp  MIP.hpp  MIP2.cpp  MIP2.hpp  ProgressifAlgorithm.cpp  ProgressifAlgorithm.hpp  ProgressiveAlgorithm.cpp  ProgressiveAlgorithm.hpp  Solution.hpp  appalgodraw.py  benchmark.py  main.cpp  readSummaries.py
